# plotly-dash-test

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
api/: Dockerfile  app.py  celery_app.py  tasks.py  utils.py
