[tool.poetry]
name = "plotly-dash-test"
version = "0.1.0"
description = ""
authors = ["Akinshin Anatoly <a.akinshin@satvaspace.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.5.1"
pandas = "^1.4.3"
gunicorn = "^20.1.0"
celery = "^5.2.7"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
